[package]
name = "pixelbuster"
version = "0.2.0"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-parallel = "3"
fastrand = "1"
num_cpus = "1"

# own crate
colcon = "0.1.0"

# gpu
wgpu = {version = "0.13", optional = true}
pollster = {version = "0.2", optional = true}
env_logger = {version = "0.9", optional = true}
bytemuck = {version = "1", optional = true}

# gui
eframe = {version = "0.18", optional = true}
image = {version = "0.24", optional = true}
rfd = {version = "0.9", optional = true}

[features]
gui = ["dep:eframe", "dep:image", "dep:rfd"]
gpu = ["dep:wgpu", "dep:pollster", "dep:env_logger", "dep:bytemuck"]

default = ["gpu"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gui"
required-features = ["gui"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
