[package]
name = "pixelbuster"
version = "0.2.1"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-parallel = "3"
fastrand = "2"
num_cpus = "1"

# mine
colcon = "0.2"

eframe = {version = "0.22", optional = true, features=["wgpu"]}
image = {version = "0.24", optional = true}
rfd = {version = "0.11", optional = true}

[features]
gui = ["dep:eframe", "dep:image", "dep:rfd"]
D50 = []

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gui"
required-features = ["gui"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
