[package]
name = "pixelbuster"
version = "0.2.3"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.10"
fastrand = "2"
# gui
eframe = {version = "0.22", optional = true, features=["wgpu"]}
image = {version = "0.25", optional = true}
rfd = {version = "0.14", optional = true}

[dev-dependencies]
criterion = "0.5"

[features]
gui = ["dep:eframe", "dep:image", "dep:rfd"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gui"
required-features = ["gui"]

[[bench]]
name = "ops"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
strip = true
